--- a/GameApp/GameApp.csproj
+++ b/GameApp/GameApp.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Application\ApplicationInitializationSettings.cs" />
     <Compile Include="Application\TimeManager.cs" />
     <Compile Include="Files\FileManager.cs" />
+    <Compile Include="Game\GameObject.cs" />
     <Compile Include="Game\Scene.cs" />
     <Compile Include="Game\SceneManager.cs" />
     <Compile Include="Graphics\GLHandler.cs" />
