--- a/GameEngine/GameEngine.csproj
+++ b/GameEngine/GameEngine.csproj
@@ -107,7 +107,9 @@
     <Compile Include="Modding\ModManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\IResourceManager.cs" />
+    <Compile Include="Resources\Loaders\ShaderLoader.cs" />
     <Compile Include="Resources\Loaders\TextLoader.cs" />
+    <Compile Include="Resources\Loaders\TextureLoader.cs" />
     <Compile Include="Resources\Resource.cs" />
     <Compile Include="Resources\ResourceManager.cs" />
     <Compile Include="Resources\ResourceLoader.cs" />
